--- a/index.html
+++ b/index.html
@@ -15,24 +15,18 @@
                 <img src="assets/images/logo.svg" alt="Zohari Logo" class="logo">
                 <img src="assets/images/avatar.svg" alt="User Avatar" class="avatar">
             </div>
-            <div id="side-menu" class="side-menu">
-                <button class="close-btn" onclick="closeMenu()">✖</button>
-                <nav>
-                    <a href="#">My Account</a>
-                    <a href="#">Home</a>
-                    <a href="#">Categories</a>
-                    <a href="#">FAQ's</a>
-                    <a href="#">Feedback</a>
-                </nav>
-            </div>
+            <nav class="nav-bar">
+                <ul>
+                    <li class="nav-item active"><a href="#">For You</a></li>
+                    <li class="nav-item"><a href="#">Top Charts</a></li>
+                    <li class="nav-item"><a href="#">Kids</a></li>
+                    <li class="nav-item"><a href="#">Categories</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
-
             <section class="category">
-
                 <div class="games">
-
-
                     <div class="game">
                         <img src="assets/images/game2.svg" alt="Game 2">
                         <button class="play-now" onclick="viewGameProfile('Game 2')">Play Now</button>
@@ -61,7 +55,7 @@
                         <img src="assets/images/game4.svg" alt="Game 4">
                         <button class="play-now" onclick="viewGameProfile('Game 4')">Play Now</button>
                     </div>
-                    
+
                 </div>
 
             </section>
