--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
         </main>
         <footer class="footer">
             <div class="footer-item">
-                <img src="search-icon.png" alt="Search Icon">
-                <p>Search</p>
+              <img src="assets/images/search-icon.png" alt="Search Icon">
+              <p>Search</p>
             </div>
             <div class="footer-item active">
-                <img src="tournaments-icon.png" alt="Tournaments Icon">
-                <p>Tournaments</p>
+              <img src="assets/images/tournaments-icon.png" alt="Tournaments Icon">
+              <p>Tournaments</p>
             </div>
             <div class="footer-item">
-                <img src="settings-icon.png" alt="Settings Icon">
-                <p>Settings</p>
+              <img src="assets/images/settings-icon.png" alt="Settings Icon">
+              <p>Settings</p>
             </div>
-        </footer>
+          </footer>          
     </div>
     <div class="desktop-message">
         <section class="error-container">
