--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
       </section>
 
       <section class="suggested">
-        <h2>Sponsored | Suggested for you</h2>
+        <div class="header">
+          <h2>Sponsored</h2>
+          <span class="suggested-header">| Suggested for you</span>
+        </div>
         <div class="suggested-items">
           <div class="suggested-item">
             <img src="assets/images/game1.svg" alt="Booking.com">
